--- a/templates/accesorios.html
+++ b/templates/accesorios.html
@@ -5,81 +5,82 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Accesorios</title>
-        <link rel="shortcut icon" href="Imagenes/Logo mini.png" type="image/x-icon">
+        <link rel="shortcut icon" href="{{ url_for('static', filename='imagenes/Logo mini.png') }}" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&display=swap" rel="stylesheet">
         <!--CSS-->
-        <link rel="stylesheet" href="css/accesorios.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/accesorios.css') }}">
         <script src="https://kit.fontawesome.com/6712d5fba4.js" crossorigin="anonymous"></script>
     </head>
     <body>
     <header></header>
     <nav class="navegacion">
-        <a class="navegador" href="home.html">Home</a>
-        <a class="navegador" href="accesorios.html">Accesorios</a>
-        <a class="navegador" href="ropa.html">Ropa</a>
-        <a class="navegador" href="contactanos.html">Contáctanos</a>
+        <a class="navegador" href="{{url_for('home')}}">Home</a>
+        <a class="navegador" href="{{url_for('accesorios')}}">Accesorios</a>
+        <a class="navegador" href="{{url_for('ropa')}}">Ropa</a>
+        <a class="navegador" href="{{url_for('contactanos')}}">Contáctanos</a>
+        <a class="navegador" href="{{url_for('productos')}}">Inventario</a>
        </nav>
        <div class="galeria">
         <!--Primera imagen-->
    <div>
-        <a class="productos" href="producto.html"><img src="Imagenes/sinimagen.jpg" alt="imagen" width="500px" >
+        <a class="productos" href="producto.html"><img src="{{ url_for('static', filename='imagenes/sinimagen.jpg') }}" alt="imagen" width="500px" >
         <h2>Nombre del Producto</h2></a>
     </div> 
         <!--Segunda imagen-->
     <div>
-        <a class="productos" href="producto.html"><img src="Imagenes/sinimagen.jpg" alt="imagen"width="500px" >
+        <a class="productos" href="producto.html"><img src="{{ url_for('static', filename='imagenes/sinimagen.jpg') }}" alt="imagen"width="500px" >
         <h2>Nombre del Producto</h2></a>
     </div> 
         <!--Tercera imagen-->
     <div>
-        <a class="productos" href="producto.html"><img src="Imagenes/sinimagen.jpg" alt="imagen"width="500px" >
+        <a class="productos" href="producto.html"><img src="{{ url_for('static', filename='imagenes/sinimagen.jpg') }}" alt="imagen"width="500px" >
         <h2>Nombre del Producto</h2></a>
     </div> 
         <!--Cuarta imagen-->
    <div>
-         <a class="productos" href="producto.html"><img src="Imagenes/sinimagen.jpg" alt="imagen"width="500px" >
+         <a class="productos" href="producto.html"><img src="{{ url_for('static', filename='imagenes/sinimagen.jpg') }}" alt="imagen"width="500px" >
          <h2>Nombre del Producto</h2></a>
     </div> 
         <!--Quinta imagen-->
     <div>
-         <a class="productos" href="producto.html"><img src="Imagenes/sinimagen.jpg" alt="imagen"width="500px" >
+         <a class="productos" href="producto.html"><img src="{{ url_for('static', filename='imagenes/sinimagen.jpg') }}" alt="imagen"width="500px" >
         <h2>Nombre del Producto</h2></a>
     </div> 
          <!--Sexta imagen-->
      <div>
-        <a class="productos" href="producto.html"><img src="Imagenes/sinimagen.jpg" alt="imagen"width="500px" >
+        <a class="productos" href="producto.html"><img src="{{ url_for('static', filename='imagenes/sinimagen.jpg') }}" alt="imagen"width="500px" >
         <h2>Nombre del Producto</h2></a>
     </div> 
          <!--Septima imagen-->
     <div>
-        <a class="productos" href="producto.html"><img src="Imagenes/sinimagen.jpg" alt="imagen"width="500px" >
+        <a class="productos" href="producto.html"><img src="{{ url_for('static', filename='imagenes/sinimagen.jpg') }}" alt="imagen"width="500px" >
         <h2>Nombre del Producto</h2></a>
     </div> 
         <!--Octava imagen-->
     <div>
-        <a class="productos" href="producto.html"><img src="Imagenes/sinimagen.jpg" alt="imagen"width="500px" >
+        <a class="productos" href="producto.html"><img src="{{ url_for('static', filename='imagenes/sinimagen.jpg') }}" alt="imagen"width="500px" >
         <h2>Nombre del Producto</h2></a>
     </div> 
          <!--Novena imagen-->
     <div>
-        <a class="productos" href="producto.html"><img src="Imagenes/sinimagen.jpg" alt="imagen"width="500px" >
+        <a class="productos" href="producto.html"><img src="{{ url_for('static', filename='imagenes/sinimagen.jpg') }}" alt="imagen"width="500px" >
         <h2>Nombre del Producto</h2></a>
     </div> 
         <!--Decima imagen-->
    <div>
-        <a class="productos" href="producto.html"><img src="Imagenes/sinimagen.jpg" alt="imagen"width="500px" >
+        <a class="productos" href="producto.html"><img src="{{ url_for('static', filename='imagenes/sinimagen.jpg') }}" alt="imagen"width="500px" >
         <h2>Nombre del Producto</h2></a>
     </div> 
         <!--Onceava imagen-->
     <div>
-        <a class="productos" href="producto.html"><img src="Imagenes/sinimagen.jpg" alt="imagen"width="500px" >
+        <a class="productos" href="producto.html"><img src="{{ url_for('static', filename='imagenes/sinimagen.jpg') }}" alt="imagen"width="500px" >
         <h2>Nombre del Producto</h2></a>
     </div> 
          <!--Doceava imagen-->
     <div>
-        <a class="productos" href="producto.html"><img src="Imagenes/sinimagen.jpg" alt="imagen"width="500px" >
+        <a class="productos" href="producto.html"><img src="{{ url_for('static', filename='imagenes/sinimagen.jpg') }}" alt="imagen"width="500px" >
         <h2>Nombre del Producto</h2></a>
     </div> </div>
 
