--- a/templates/contactanos.html
+++ b/templates/contactanos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>D'Moritas</title>
-    <link rel="shortcut icon" href="Imagenes/Logo mini.png" type="image/x-icon">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='imagenes/Logo mini.png') }}" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&display=swap" rel="stylesheet">
@@ -14,22 +14,23 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!--CSS-->
-    <link rel="stylesheet" href="css/contactanos.css">
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/contactanos.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
     <script src="https://kit.fontawesome.com/6712d5fba4.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header></header>
    	<nav>
-        <a class="navegador" href="home.html">Home</a>
-        <a class="navegador" href="accesorios.html">Accesorios</a>
-        <a class="navegador" href="ropa.html">Ropa</a>
-        <a class="navegador" href="contactanos.html">Contáctanos</a>
+        <a class="navegador" href="{{url_for('home')}}">Home</a>
+        <a class="navegador" href="{{url_for('accesorios')}}">Accesorios</a>
+        <a class="navegador" href="{{url_for('ropa')}}">Ropa</a>
+        <a class="navegador" href="{{url_for('contactanos')}}">Contáctanos</a>
+        <a class="navegador" href="{{url_for('productos')}}">Inventario</a>
    	</nav>
    	<main>
    	   <section>
         <div class="container contact-form">
-            <form method="post">
+            <form name="contact" id="contact" method="post" action="{{url_for('contactanos')}}">
                 <h3>Dejanos tu mensaje</h3>
                <div class="row">
                     <div class="col-md-6">
@@ -70,6 +71,6 @@
         <a href="https://www.facebook.com/" target="_blank">    <i class="fab fa-facebook fa-fw fa-2x fa-beat-fade" style="color: var(--example-color); --fa-animation-duration:2s;"></i></a>   
         </p>
     </footer>
-<script src="js/validacion.js"></script>
+<script src="{{ url_for('static', filename='js/validacion.js') }}"></script>
 </body>
 </html>
