--- a/templates/producto.html
+++ b/templates/producto.html
@@ -5,22 +5,23 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Productos</title>
-        <link rel="shortcut icon" href="Imagenes/Logo mini.png" type="image/x-icon">
+        <link rel="shortcut icon" href="{{ url_for('static', filename='imagenes/Logo mini.png') }}" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&display=swap" rel="stylesheet">
         <!--CSS-->
-        <link rel="stylesheet" href="css/home.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
         <script src="https://kit.fontawesome.com/6712d5fba4.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <!--  <div class="principal">-->
     <header></header>
     <nav class="navegacion">
-        <a class="navegador" href="home.html">Home</a>
-        <a class="navegador" href="accesorios.html">Accesorios</a>
-        <a class="navegador" href="ropa.html">Ropa</a>
-        <a class="navegador" href="contactanos.html">Contáctanos</a>
+        <a class="navegador" href="{{url_for('home')}}">Home</a>
+        <a class="navegador" href="{{url_for('accesorios')}}">Accesorios</a>
+        <a class="navegador" href="{{url_for('ropa')}}">Ropa</a>
+        <a class="navegador" href="{{url_for('contactanos')}}">Contáctanos</a>
+        <a class="navegador" href="{{url_for('productos')}}">Inventario</a>
     </nav>
     <div>
         <br><br><br><br><br><br><br><br><br>
